# contador-oriental-ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AI_CONTADOR_PLAN.md  AUDITORIA_CODIGO.md  CHECK_FLET_README.md  COLORES_GUIA.md  CONTADOR_ORIENTAL_GUIA.md  CORRECCIONES_2026-06-09.md  Dockerfile  ESTRUCTURA.md  Modelfile  NOTES_AUTOCOMPLETADO.md  OCR_MICROSERVICE_SUMMARY.md  PLAN_MEMORIA_PERMANENTE.md  PLAN_OCR_TICKETS.md  PROBLEMAS_GRAVES.md  README.md  SESSION_NEXT.md  TIPOS_Y_CALIDAD.md  check_flet.py  deploy.sh  docker-compose.yml  entrypoint.sh  generate_secret_key.py  main.py  migrate_legacy.py  mypy.ini  pyproject.toml  pytest.ini  shopping.db  test_ocr_api.py  ty_errors.txt
AGENTS/: .windsurfrules  ARCHITECTURE_SPEC.md  CODING_STANDARDS_SPEC.md  DESIGN_EXCHANGE_RATE.md  IMPLEMENTATION_SPEC.md  INSTALLMENT_EXPENSES_SPEC.md  PRODUCT_SPEC.md  SPEC_LLAMA3_MEJORAS.md
configs/: app_config.py  database.py  database_config.py  routes.py
constants/: messages.py  responsive.py
controllers/: ai_controller.py  auth_controller.py  base_controller.py  exchange_rate_controller.py  expense_controller.py  family_member_controller.py  help_controller.py  history_controller.py  income_controller.py  installment_controller.py  ocr_controller.py  registration_controller.py  settings_controller.py  shopping_controller.py
core/: app.py  database.py  error_handler.py  events.py  i18n.py  logger.py  member_cache.py  migrations.py  responsive.py  router.py  security.py  session.py  sqlalchemy_session.py  state.py  unit_of_work.py
database/: engine.py  tables.py
docs/: AUDITORIA_CODIGO.md  DOCKER_DEPLOYMENT.md  ESTRUCTURA.md  POSTGRESQL_SETUP.md  VERIFICAR_PUERTOS.md  ia_improvements_log.md
flet_types/: flet_types.py  stubs.py
guardian/: guardian_service.py
knowledge/: README.md  ahorro_ui_uy.md  bps_aportes_uy.md  inclusion_financiera_uy.md  irpf_familia_uy.md  iva_general_uy.md  sucive_patentes_uy.md
migrations/: 001_initial.py  002_add_multiuser.py  003_restructure_family_members.py  004_add_pets_support.py  005_add_monthly_snapshots.py  006_add_ai_vector_memory.py  007_add_expense_embedding.py  008_add_ticket_fields.py  009_add_activo_to_family_members.py  010_add_installment_system.py  011_add_expense_pendiente.py  012_add_exchange_rates.py  013_add_ai_usage.py  014_add_password_recovery.py  README.md  __init__.py  migrate.py
models/: ai_model.py  ai_usage_model.py  categories.py  errors.py  exchange_rate_model.py  expense_model.py  family_member_model.py  family_model.py  help_model.py  income_model.py  installment_model.py  memoria_model.py  password_reset_model.py  settings_model.py  shopping_model.py  ticket_model.py  user_model.py
nginx/: nginx.conf
ocr_api/: Dockerfile  README.md  __init__.py  config.py  entrypoint.sh  main.py  models.py  pyproject.toml
repositories/: ai_usage_repository.py  base_repository.py  base_table_repository.py  exchange_rate_repository.py  expense_repository.py  family_member_mappers.py  family_member_repository.py  income_mappers.py  income_repository.py  installment_repository.py  mappers.py  memoria_repository.py  monthly_snapshot_repository.py  password_reset_repository.py  shopping_repository.py  user_repository.py
scripts/: README.md  audit_repository_usage.py  auditor_real.py  check_user.py  convert_icon.py  diagnose_login.py  fix_password.py  gran_auditor_charrua.py  update_exchange_rate.py
seeds/: 001_gastos_ficticios.py  002_memoria_vectorial.py  003_expense_embeddings.py  essential_data.py  initial.py
services/: __init__.py  ai_advisor_service.py  auth_service.py  expense_service.py  family_member_service.py  ia_memory_service.py  income_service.py  memory_event_handler.py  shopping_service.py  ticket_service.py
tests/: COBERTURA_TESTS.md  conftest.py  test_ai_formatters.py  test_auth_service.py  test_base_controller.py  test_base_table_repository.py  test_controllers.py  test_edge_cases.py  test_email_service.py  test_expense_model.py  test_expense_service.py  test_family_member_mappers.py  (+21 more)
(+46 files in other folders)
