[project]
name = "smart-shopping-list"
version = "0.1.0"
description = "Proyecto control de gastos con fleting y arquitectura MVC"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "flet",
    "flet-web",
    "fleting",
    "sqlalchemy",
    "pydantic",
    "result",
    "argon2-cffi",
    "psycopg2-binary",
    "pillow",
    "python-dotenv>=1.2.1",
    "ollama>=0.1.0",
]

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "pytest",
    "pytest-cov",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "flet.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "flet_web.*"
ignore_errors = true

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PYI"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
