[project]
name = "contador-oriental"
version = "0.1.0"
description = "Auditor familiar con IA local para Uruguay - Contador Oriental"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "flet",
    "flet-web",
    "fleting",
    "sqlalchemy",
    "pydantic",
    "result",
    "argon2-cffi",
    "psycopg2-binary",
    "pillow",
    "python-dotenv>=1.2.1",
    "ollama>=0.1.0",
    "fpdf2>=2.7.0",
]

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "pytest",
    "pytest-cov",
    "flet>=0.80.4",
    "types-pyyaml>=6.0.12.20250915",
    "result>=0.17.0",
]

[tool.ty.analysis]
# Permitir imports no resueltos de Flet
allowed-unresolved-imports = ["flet", "flet.*"]
# Reemplazar imports de Flet con any
replace-imports-with-any = ["flet", "flet.*"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "flet.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "flet_web.*"
ignore_errors = true

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PYI"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
